--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,7 +40,6 @@
 
 .main {
   display: flex;
-  /*align-content: stretch;*/
 }
 
 /*.main div {
@@ -50,20 +49,20 @@
 .main.large {
   display: flex;
   width: 630px;
-  border: 1px solid black;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .main.medium {
   display: flex;
   width: 300px;
-  border: 1px solid black;
   align-items: stretch;
 }
 
 .main.small {
   display: flex;
   width: 240px;
-  border: 1px solid black;
+  flex-direction: column;
 }
 
 .mainimg {
@@ -74,12 +73,13 @@
 .fall {
   display: inline-flex;
   background-image: URL("../images/fall.png");
-  flex-grow: 1;
+  max-width: 300px;
 }
 
 .hipster {
   display: inline-flex;
   background-image: URL("../images/hipster.png");
+  max-width: 300px;
 }
 
 .cat {
@@ -105,4 +105,69 @@ h2 {
   font-weight: bold;
   font-size: 30px;
   color: white;
+}
+
+.monument {
+  display: flex;
+}
+
+.orca {
+  display: inline-flex;
+  max-width: 300px;
+  flex-direction: column;
+}
+
+.burger {
+  display: inline-flex;
+  max-width: 300px;
+  flex-direction: column;
+}
+
+.fbi {
+  display: flex;
+}
+
+.brooklyn {
+  display: flex;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.small span {
+  display: block;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+.footer {
+  display: flex;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  justify-content: center;
+  align-items: center;
+}
+
+#footerlogo {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+.footer span {
+  color: black;
+  margin: 20px;
+}
+
+#copyright {
+  display: block;
 }
